--- a/back/templates/index.html
+++ b/back/templates/index.html
@@ -12,7 +12,7 @@
           <p>draw a digit here!</p>
           <canvas id="main"></canvas>
           <p>
-            <button id="clear" class="btn btn-default">clear</button>
+            <button id="clear" class="btn-default">clear</button>
           </p>
         </div>
         <div class="col-md-6">
