初步完成一个简单sgd-HWDR应用

--- a/back/templates/macros.html
+++ b/back/templates/macros.html
@@ -10,3 +10,11 @@
         <link rel="icon" href="{{ filename_or_url }}">
     {%- endif %}
 {% endmacro %}
+
+{% macro copytrtd(num) %}
+    <tr>
+        <th>{{num}}</th>
+        <td></td>
+        <td></td>
+    </tr>
+{% endmacro %}
