--- a/back/templates/index.html
+++ b/back/templates/index.html
@@ -2,85 +2,48 @@
 <html>
   <head>
     <title>MNIST</title>
-    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/bootstrap.min.css')}}">
+    {% from "macros.html" import static_file %}
+    {{ static_file('css','css/bootstrap.min.css') }}
+    {{ static_file('css','css/mystyle.css') }}
   </head>
   <body>
     <div class="container">
-      <h1>MNIST</h1>
+      <h1>HWDR——手写数字识别</h1>
       <div class="row">
         <div class="col-md-6">
-          <p>draw a digit here!</p>
+          <p>在下方用鼠标画一个数字吧！</p>
           <canvas id="main"></canvas>
           <p>
-            <button id="clear" class="btn-default">clear</button>
+            <button id="clear" class="btn-default">清空画布</button>
           </p>
         </div>
         <div class="col-md-6">
-          <p>input:</p>
+          <p>输入图像：</p>
           <canvas id="input" style="border:1px solid" width="140" height="140"></canvas>
           <hr>
-          <p>output:</p>
+          <p>输出分数：</p>
           <table id="output" class="table">
+            {% from "macros.html" import copytrtd %}
             <tr>
               <th class="col-md-1"></th>
-              <th class="col-md-2">regression</th>
-              <th class="col-md-2">convolutional</th>
+              <th class="col-md-2">SGDClassifier</th>
+<!--              <th class="col-md-2">convolutional</th>-->
             </tr>
-            <tr>
-              <th>0</th>
-              <td></td>
-              <td></td>
-            </tr>
-            <tr>
-              <th>1</th>
-              <td></td>
-              <td></td>
-            </tr>
-            <tr>
-              <th>2</th>
-              <td></td>
-              <td></td>
-            </tr>
-            <tr>
-              <th>3</th>
-              <td></td>
-              <td></td>
-            </tr>
-            <tr>
-              <th>4</th>
-              <td></td>
-              <td></td>
-            </tr>
-            <tr>
-              <th>5</th>
-              <td></td>
-              <td></td>
-            </tr>
-            <tr>
-              <th>6</th>
-              <td></td>
-              <td></td>
-            </tr>
-            <tr>
-              <th>7</th>
-              <td></td>
-              <td></td>
-            </tr>
-            <tr>
-              <th>8</th>
-              <td></td>
-              <td></td>
-            </tr>
-            <tr>
-              <th>9</th>
-              <td></td>
-              <td></td>
-            </tr>
+            {{ copytrtd(0) }}
+            {{ copytrtd(1) }}
+            {{ copytrtd(2) }}
+            {{ copytrtd(3) }}
+            {{ copytrtd(4) }}
+            {{ copytrtd(5) }}
+            {{ copytrtd(6) }}
+            {{ copytrtd(7) }}
+            {{ copytrtd(8) }}
+            {{ copytrtd(9) }}
           </table>
         </div>
       </div>
     </div>
-    <script type="text/javascript" src="{{ url_for('static', filename='js/jquery-3.5.1.min.js')}}"></script>
-    <script type="text/javascript" src="{{ url_for('static', filename='js/main.js')}}"></script>
+    {{ static_file('js','js/jquery-3.5.1.min.js') }}
+    {{ static_file('js','js/main.js') }}
   </body>
 </html>
