--- a/back/templates/about.html
+++ b/back/templates/about.html
@@ -5,6 +5,9 @@
     <title>About</title>
 </head>
 <body>
-    <h1>About</h1>
+    <h1>About|关于此项目</h1>
+    <p>
+        主要使用MNIST数据集训练，所以数字风格会像美国人。想获得较高的识别率，可以参考他们的数字写法~
+    </p>
 </body>
 </html>
