--- a/back/templates/index.html
+++ b/back/templates/index.html
@@ -11,6 +11,7 @@
       <h1>HWDR——手写数字识别</h1>
       <div class="row">
         <div class="col-md-6">
+          <p><a href="about" class="aboutlink">About|关于此项目</a></p>
           <p>在下方用鼠标画一个数字吧！</p>
           <canvas id="main"></canvas>
           <p>
@@ -18,6 +19,7 @@
           </p>
         </div>
         <div class="col-md-6">
+
           <p>输入图像：</p>
           <canvas id="input" style="border:1px solid" width="140" height="140"></canvas>
           <hr>
@@ -26,7 +28,7 @@
             {% from "macros.html" import copytrtd %}
             <tr>
               <th class="col-md-1"></th>
-              <th class="col-md-2">SGDClassifier</th>
+              <th class="col-md-2">SVMClassifier</th>
 <!--              <th class="col-md-2">convolutional</th>-->
             </tr>
             {{ copytrtd(0) }}
